# t4-devkit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CLAUDE.md  README.md  T4_ROSBAG_IMPLEMENTATION_GUIDE.md  T4_TO_ROSBAG_PROJECT.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  test_t4_to_rosbag.sh  versions.json
.github/: release-drafter.yml
.github/workflows/: build-and-test.yaml  cancel-previous-workflows.yaml  deploy-document.yaml  pre-commit.yaml  release-drafter.yaml
apis/common/: index.html
apis/dataclass/: index.html
apis/filtering/: index.html
apis/helper/: index.html
apis/schema/: index.html
apis/tier4/: index.html
apis/typing/: index.html
apis/viewer/: index.html
develop/: 404.html  index.html  objects.inv
develop/cli/: index.html
develop/install/: index.html
develop/schema/: index.html
develop/search/: search_index.json
docs/: index.md  install.md
docs/apis/: common.md  dataclass.md  evaluation.md  filtering.md  helper.md  sanity.md  schema.md  typing.md  viewer.md
docs/cli/: index.md  t4sanity.md  t4viz.md
docs/schema/: data.md  index.md  requirement.md  table.md
docs/tutorials/: cli.md  customize.md  evaluation.md  initialize.md  render.md  sanity.md
install/: index.html
schema/: index.html
schema/data/: index.html
schema/table/: index.html
search/: search_index.json
t4_devkit/: tier4.py  typing.py
t4_devkit/cli/: rosbag.py  sanity.py  version.py  visualize.py
t4_devkit/common/: __init__.py  color.py  converter.py  geometry.py  io.py  sanity.py  sanity_checker.py  serialize.py  timestamp.py  transform.py  validator.py
t4_devkit/dataclass/: __init__.py  box.py  label.py  pointcloud.py  roi.py  shape.py  trajectory.py  transform.py
t4_devkit/evaluation/: __init__.py  config.py  dataset.py  evaluator.py  task.py
t4_devkit/filtering/: __init__.py  compose.py  functional.py  parameter.py
t4_devkit/helper/: __init__.py  rendering.py  timeseries.py
t4_devkit/lanelet/: __init__.py  parser.py
t4_devkit/rosbag/: __init__.py  autoware_messages.py  converter.py  pandar_decoder.py  pipeline.py  pointcloud2.py  reader.py  topic_mapping.py  writer.py
t4_devkit/sanity/: __init__.py  base.py  checker.py  context.py  count.py  registry.py  result.py  run.py  safety.py  scene.py  structure.py  utility.py
t4_devkit/schema/: builder.py  compatibility.py  name.py  serialize.py
t4_devkit/typing/: __init__.py  aliases.py  camera.py  matrix.py  quaternion.py  roi.py  trajectory.py  vector.py
t4_devkit/viewer/: __init__.py  builder.py  color.py  config.py  geography.py  lanelet.py  rendering_data.py  traffic_light.py  viewer.py
tests/: conftest.py  test_tier4.py
tests/common/: test_geometry.py  test_io.py  test_timestamp.py  test_transform.py  test_validator.py
tests/dataclass/: test_box.py  test_label.py  test_pointcloud.py  test_roi.py  test_shape.py  test_trajectory.py  test_transform.py
tests/evaluation/: conftest.py  test_dataset.py  test_task.py
v0.2.0/: objects.inv
v0.2.1/: 404.html  index.html
v0.3.0/: objects.inv
v0.4.2/: 404.html  index.html
v0.5.1/: objects.inv
v0.5.3/: index.html
v0.6.0/: index.html
v0.7.0/: index.html
v0.7.1/: objects.inv
(+397 files in other folders)
