[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t4-devkit"
version = "0.5.0"
description = "A toolkit to load and operate T4 dataset."
authors = [{ name = "Kotaro Uetake", email = "kotaro.uetake@tier4.jp" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "rerun-sdk==0.20.0",
    "pyquaternion>=0.9.9",
    "matplotlib>=3.9.2",
    "shapely<2.0.0; python_version=='3.10'",
    "shapely>=2.0.0; python_version>'3.10'",
    "pycocotools>=2.0.8",
    "pyyaml>=6.0.2",
    "typer>=0.15.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "returns>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "lark>=1.1.9",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.47",
    "mkdocstrings[python]>=0.18",
    "ruff>=0.8",
    "mike>=2.1.3",
]

[project.scripts]
t4viz = "t4_devkit.cli.visualize:cli"
t4sanity = "t4_devkit.cli.sanity:cli"

[tool.ruff]
line-length = 100

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
